[package]
name = "hbs-wasm"
version = "0.1.1"
authors = ["Dylan <60218243+dymoo@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
html-minifier = "3.0.9"
handlebars = "3.5.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }